# oca-rs

./: .gitignore  Cargo.toml  README.md  release-wasm-hook.sh  release.toml
.github/workflows/: bin-assets.yml  ci.yml  create.yml  npm-publish.yml  oca-ast_publish.yml  oca-bundle_npm-publish.yml  oca-bundle_publish.yml  oca-bundle_wasm.yml  oca-dag_publish.yml  oca-file_publish.yml  oca-rs_publish.yml  rust.yml  wasm.yml
bindings/dart/: Cargo.toml
bindings/dart/oca/: pubspec.yaml
bindings/dart/oca/lib/: bridge_generated.dart
bindings/dart/oca/test/: oca_test.dart
bindings/dart/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
bindings/js/example/: package.json
bindings/js/example/test/: building-oca.test.ts  validating-oca.test.ts
bindings/js/wasm/: Cargo.toml  README.md
bindings/js/wasm/pkg_templates/: README.md  package.json
bindings/js/wasm/src/: lib.rs
bindings/wasm/: Cargo.toml  build-pkg.sh  release-hook.sh  test.js
bindings/wasm/js/: jest.ts-config.js  package.json
bindings/wasm/js/test/: building-oca.test.ts  (+2 more)
bindings/wasm/pkg_templates/: package.json
bindings/wasm/src/: lib.rs
config/: standards.yml
oca/: Cargo.toml  README.md  release.toml
oca-ast/: Cargo.toml  README.md  ast-example.json
oca-ast/src/: ast.rs  errors.rs  lib.rs  validator.rs
oca-ast/src/ast/: attributes.rs  error.rs  mod.rs  nested_result.rs  recursive_attributes.rs
oca-bundle/: .gitignore  Cargo.toml  README.md  oca.json  release.toml
oca-bundle/bindings/dart/: Cargo.toml
oca-bundle/bindings/dart/oca/: README.md  pubspec.yaml
oca-bundle/bindings/dart/oca/lib/: bridge_generated.dart  bridge_generated.h  oca.dart
oca-bundle/bindings/dart/oca/test/: oca_test.dart
oca-bundle/bindings/dart/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
oca-bundle/bindings/js/example/: tsconfig.json
oca-bundle/bindings/js/example/test/: building-oca.test.ts  new-oca.test.ts  parsing-attribute-types.test.ts  parsing-oca.test.ts  validating-oca.test.ts
oca-bundle/bindings/js/example/test/assets/: oca.json
oca-bundle/bindings/js/wasm/: Cargo.toml  README.md  build-pkg.sh
oca-bundle/bindings/js/wasm/src/: lib.rs
oca-bundle/config/: standards.yml
oca-bundle/src/: build.rs  controller.rs  lib.rs
oca-bundle/src/state/: attribute.rs  encoding.rs  entries.rs  entry_codes.rs  mod.rs  oca.rs  validator.rs
oca-bundle/src/state/oca/: capture_base.rs  overlay.rs
oca-bundle/src/state/oca/layout/: credential.rs  form.rs
oca-bundle/src/state/oca/overlay/: attribute_mapping.rs  cardinality.rs  character_encoding.rs  conditional.rs  conformance.rs  credential_layout.rs  entry.rs  entry_code.rs  entry_code_mapping.rs  form_layout.rs  format.rs  information.rs  label.rs  meta.rs  standard.rs  subset.rs  unit.rs
oca-bundle/tests/: create_oca_test.rs
oca-dag/: .gitignore  Cargo.toml
oca-dag/src/: build.rs  data_storage.rs  lib.rs
oca-dag/src/versioning/: bundle.rs  mod.rs  ocafile.rs
oca-dag/tests/: test.rs
oca-file/: Cargo.toml  README.md  release.toml
oca-file/src/: lib.rs  main.rs  ocafile.pest
oca-file/src/ocafile/: error.rs  mod.rs
oca-file/src/ocafile/instructions/: add.rs  from.rs  helpers.rs  mod.rs  remove.rs
oca/src/: data_storage.rs  lib.rs  local_references.rs
oca/src/facade/: build.rs  bundle.rs  explore.rs  fetch.rs  mod.rs
oca/src/repositories/: capture_base_cache_repo.rs  mod.rs  oca_bundle_cache_repo.rs  oca_bundle_fts_repo.rs  oca_bundle_read_model_repo.rs
oca/tests/: build_from_ocafile.rs
ocatool/: Cargo.toml  README.md
ocatool/src/: main.rs
semantics/oca-ast/: Cargo.toml
semantics/oca-ast/src/ast/: attributes.rs  mod.rs  recursive_attributes.rs
semantics/oca-bundle/: Cargo.toml  README.md  release.toml
semantics/oca-bundle/src/: build.rs  controller.rs  lib.rs
semantics/oca-bundle/src/state/: attribute.rs  encoding.rs  entries.rs  entry_codes.rs  mod.rs  oca.rs  standard.rs  validator.rs
semantics/oca-bundle/src/state/oca/: capture_base.rs  overlay.rs
semantics/oca-bundle/src/state/oca/layout/: form.rs
semantics/oca-bundle/src/state/oca/overlay/: attribute_framing.rs  attribute_mapping.rs  cardinality.rs  character_encoding.rs  conditional.rs  conformance.rs  credential_layout.rs  entry.rs  entry_code.rs  entry_code_mapping.rs  form_layout.rs  format.rs  information.rs  label.rs  link.rs  meta.rs  standard.rs  subset.rs  unit.rs
semantics/oca-bundle/tests/: create_oca_test.rs
semantics/oca-dag/: Cargo.toml  README.md  release.toml
semantics/oca-dag/src/: data_storage.rs  lib.rs
semantics/oca-dag/src/versioning/: bundle.rs  ocafile.rs
semantics/oca-dag/tests/: test.rs
semantics/oca-file/: Cargo.toml  README.md  release.toml
semantics/oca-file/src/: ocafile.pest
src/: controller.rs  lib.rs  main.rs
src/io/: mod.rs
src/oca/: parse.rs
src/state/: attribute.rs  capture_base.rs  encoding.rs  entries.rs  entry_codes.rs  language.rs  mod.rs  oca.rs  overlay.rs  standard.rs  validator.rs
src/state/oca/: capture_base.rs  layout.rs  overlay.rs
src/state/overlay/: character_encoding.rs  entry.rs  entry_code.rs  format.rs  information.rs  label.rs  meta.rs  unit.rs
src/xls_parser/: data_entry.rs  entries.rs  mod.rs  oca.rs
tests/: Cargo.toml  build_from_ocafile.rs  create_oca_test.rs  dev.rs  parse_entries_xls.rs  parse_oca_xls.rs  parse_xls.rs
tests/assets/: entries_template.xlsx  oca_template.xls  oca_template.xlsx
tmp/: OCA_SchemaTemplate_v1.xlsx  Untitled 1.ods  data_entry-2.xlsx
transformation/ast/: Cargo.toml
transformation/ast/src/: lib.rs  validator.rs
transformation/oca-file/: Cargo.toml  README.md
transformation/oca-file/src/: ocafile.pest
transformation/oca-file/src/ocafile/: mod.rs
transformation/oca-file/src/ocafile/instructions/: helpers.rs  link.rs  mod.rs  rename.rs
transformation/ocafile/: Cargo.toml
transformation/ocafile/src/: lib.rs  ocafile.pest
transformation/transformation-file/: Cargo.toml  README.md  release.toml
transformation/transformation-file/src/: build.rs  lib.rs
transformation/transformation-file/src/state/: mod.rs
(+31 files in other folders)
