[package]
license = "GPL-3.0"
description = "Rust implementation of Overlays Capture Architecture"
name = "oca-rust"
version = "0.1.36"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
command_line = ["clap", "zip"]
xls_parser = ["calamine"]

[[bin]]
name = "parser"
required-features = ["command_line", "xls_parser"]

[dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
said = "0.1.2"
erased-serde = "0.3.16"
wasm-bindgen = { version = "0.2.77" }
serde-value = "0.7.0"
calamine = { version = "0.18.0", optional = true }
clap = { version = "3.0.0-beta.4", optional = true }
zip = { version = "0.5.13", optional = true }
regex = "1.5.4"
indexmap = "1.8.0"

[dev-dependencies]
maplit = "1.0.2"
