[package]
name = "oca-ast"
version = "0.3.0-rc.20"
edition = "2021"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
license = "EUPL-1.2"
readme = "README.md"
description = "Library for handling Abstract Syntax Tree of OCA bundle"


[lib]
name = "oca_ast"
path = "src/lib.rs"


[dependencies]
thiserror = "1.0.38"
log = "0.4.0"
env_logger = "0.10.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"
indexmap = { version = "1.9.3", features = ["serde"]}
wasm-bindgen = { version = "0.2.77" }
