[package]
license = "EUPL-1.2"
description = "Rust implementation of Overlays Capture Architecture bundle"
name = "oca-bundle"
version = "0.2.29"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_yaml = "0.8"
serde = { version = "1.0", features = ["derive"] }
said = "0.2.1"
erased-serde = "0.3.16"
wasm-bindgen = { version = "0.2.77" }
serde-value = "0.7.0"
regex = "1.5.4"
indexmap = "1.8.0"
urn = "0.5.1"
lazy_static = "1.4.0"

[dev-dependencies]
maplit = "1.0.2"
