[package]
license = "EUPL-1.2"
description = "Rust implementation of Overlays Capture Architecture bundle"
name = "oca-bundle"
version = "0.3.0"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
format_overlay = []
format = []

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }
# said = "0.2.1"
said = { path = "../../cesrox/said", features = ["macros"] }
# version = { path = "../../cesrox/version" }
erased-serde = "0.3.16"
wasm-bindgen = { version = "0.2.77" }
serde-value = "0.7.0"
regex = "1.5.4"
indexmap = "1.8.0"
urn = "0.5.1"
lazy_static = "1.4.0"
cascade = "1.0.1"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
paste = "1.0.11"
dyn-clonable = "0.9.0"

[dependencies.isolang]
# version = "2.2.0"
# needs to be loaded from source util the PR #35 is released
git = "https://github.com/humenda/isolang-rs"
features = ["serde"]

[dev-dependencies]
maplit = "1.0.2"
