[package]
name = "oca-dag"
version = "0.3.0-rc.1"
edition = "2021"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
license = "EUPL-1.2"
readme = "README.md"
description = "Rust implementation of OCA DAG"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_dag"
path = "src/lib.rs"

[dependencies]
convert_case = "0.6.0"
dyn-clonable = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
said = { version = "0.3.0", features = ["macros"] }
oca-bundle = { version = "0.3.0-rc.8", features = ["format_overlay"] }
oca-ast = "0.3.0-rc.6"
indexmap = { version = "1.9.3", features = ["serde"]}
isolang = { version = "2.3.0", features = ["serde"] }
