[package]
name = "oca-dag"
version = "0.4.5"
edition = "2021"
authors = [
  "Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>",
  "Robert Mitwicki <robert.mitwicki@opensoftware.pl>",
  "Michał Pietrus <michal.pietrus@opensoftware.pl>",
]
license = "EUPL-1.2"
readme = "README.md"
description = "Rust implementation of OCA DAG"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_dag"
path = "src/lib.rs"

[dependencies]
dyn-clonable = "0.9.0"
indexmap = { version = "1.9.3", features = ["serde"] }
isolang = { version = "2.3.0", features = ["serde"] }
oca-ast = { version = "0.4.5", path = "../oca-ast" }
oca-bundle = { version = "0.4.5", path = "../oca-bundle", features = [
  "format_overlay",
] }
said = { version = "0.3.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
