[package]
name = "oca-rs"
description = "OCA rust ecosytem facade"
version = "0.4.1-rc.6"
license = "EUPL-1.2"
edition = "2021"
authors = [
  "Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>",
  "Robert Mitwicki <robert.mitwicki@opensoftware.pl>",
  "Michał Pietrus <michal.pietrus@opensoftware.pl>",
]
readme = "README.md"
include = ["src/**/*", "README.md"]

[lib]
name = "oca_rs"
path = "src/lib.rs"

[features]
local-references = []

[dependencies]
dyn-clonable = "0.9.0"
isolang = "2.3.0"
oca-ast = { version = "0.4.1-rc.6", path = "../oca-ast" }
oca-bundle = { version = "0.4.1-rc.6", path = "../oca-bundle", features = [
  "format_overlay",
] }
oca-dag = { version = "0.4.1-rc.6", path = "../oca-dag" }
oca-file = { version = "0.4.1-rc.6", path = "../oca-file" }
regex = "1.9.5"
rusqlite = "0.29.0"
said = { version = "0.3.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
thiserror = "1.0.49"
log = "0.4.20"
