[package]
name = "oca-rs"
description = "OCA rust ecosytem facade"
version = "0.4.5"
license = "EUPL-1.2"
edition = "2021"
authors = [
  "Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>",
  "Robert Mitwicki <robert.mitwicki@opensoftware.pl>",
  "Michał Pietrus <michal.pietrus@opensoftware.pl>",
]
readme = "README.md"
include = ["src/**/*", "README.md"]

[lib]
name = "oca_rs"
path = "src/lib.rs"

[features]
local-references = []

[dependencies]
dyn-clonable = "0.9.0"
isolang = "2.3.0"
oca-ast-semantics = { version = "0.4.5", path = "../semantics/oca-ast" }
oca-bundle-semantics = { version = "0.4.5", path = "../semantics/oca-bundle", features = [
  "format_overlay",
] }
oca-dag-semantics = { version = "0.4.5", path = "../semantics/oca-dag" }
oca-file-semantics = { version = "0.4.5", path = "../semantics/oca-file" }
oca-file = { version = "0.4.5", path = "../oca-file" }
transformation-file = { version = "0.4.5", path = "../transformation/transformation-file" }
regex = "1.9.5"
rusqlite = "0.29.0"
said = { version = "0.4.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34.7"
thiserror = "1.0.49"
log = "0.4.20"
