[package]
name = "oca-dart"
version = "0.2.29"
edition = "2021"

[lib]
name = "ocadart"
crate-type = ["dylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.69"
flutter_rust_bridge = "1.63.1"
oca-rs = { path = "../../../oca-rs", features = ["format_overlay"]}
serde_json = "1.0.93"
