[package]
name = "oca-bundle-semantics"
description = "Rust implementation of Overlays Capture Architecture bundle"
version = "0.5.2"
license = "EUPL-1.2"
edition = "2021"
authors = [
  "Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>",
  "Robert Mitwicki <robert.mitwicki@opensoftware.pl>",
  "Michał Pietrus <michal.pietrus@opensoftware.pl>",
]
readme = "README.md"
include = ["src/**/*", "config/**/*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oca_bundle_semantics"
path = "src/lib.rs"

[features]
format_overlay = []

[dependencies]
cascade = "1.0.1"
convert_case = "0.6.0"
dyn-clonable = "0.9.0"
erased-serde = "0.3.16"
getrandom = { version = "0.2.10", features = ["js"] }
indexmap = { version = "1.8.0", features = ["serde"]}
isolang = { version = "2.3.0", features = ["serde"] }
lazy_static = "1.4.0"
linked-hash-map = { version = "0.5.6", features = ["serde_impl"] }
oca-ast-semantics = { version = "0.5.2", path = "../oca-ast" }
paste = "1.0.11"
piccolo = "0.1.1"
regex = "1.5.4"
said = { version = "0.4.1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"
thiserror = "1.0.49"
urn = "0.5.1"
wasm-bindgen = { version = "0.2.89" }

[dev-dependencies]
maplit = "1.0.2"
