[package]
name = "oca-file-transformation"
version = "0.5.0"
edition = "2021"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
license = "EUPL-1.2"
readme = "README.md"
description = "Rust implementation of OCAFile"

[lib]
name = "oca_file_transformation"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
convert_case = "0.6.0"
pest = "2.5.1"
pest_derive = "2.5.1"
pretty_assertions = "1.3.0"
thiserror = "1.0.38"
oca-ast-transformation = { version = "0.5.0", path = "../ast" }
said = { version = "0.4.1", features = ["macros"] }
log = "0.4.20"
env_logger = "0.10.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "1.9.3", features = ["serde"]}
recursion = "0.5.1"
