[package]
name = "oca-js"
version = "0.1.29"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
wasm-bindgen = { version = "0.2.77", features = ["serde-serialize"] }
oca-rust = { path = "../../../../oca-rust" }
serde-wasm-bindgen = "0.3.1"
js-sys = "0.3.54"

[lib]
crate-type = ["cdylib"]
