[package]
name = "oca-dart"
version = "0.2.29"
edition = "2021"

[lib]
name = "ocadart"
crate-type = ["dylib"]

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.69"
flutter_rust_bridge = "1.77.1"
oca-bundle = { path = "../../../oca-bundle", features = ["format_overlay"]}
serde_json = "1.0.93"

[workspace]
