[package]
name = "oca-js"
version = "0.3.0-rc.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.130"
wasm-bindgen = { version = "0.2.85", features = ["serde-serialize"] }
oca-bundle = { path = "../../../../oca-bundle", features = ["format_overlay"] }
serde-wasm-bindgen = "0.3.1"
js-sys = "0.3.54"
isolang = { version = "2.3.0", features = ["serde"] }

[workspace]
