[package]
name = "oca-js"
version = "0.3.0-rc.9"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
isolang = { version = "2.3.0", features = ["serde"] }
js-sys = "0.3.54"
oca-ast = { path = "../../../../oca-ast" }
oca-bundle = { path = "../../../../oca-bundle", features = ["format_overlay"] }
serde = "1.0.130"
serde-wasm-bindgen = "0.5.0"
serde_json = "1.0.105"
wasm-bindgen = { version = "0.2.85", features = ["serde-serialize"] }

[workspace]
